--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -4,7 +4,16 @@
   gap: 25px;
   padding-top: 10%;
 
+  p {
+    margin: 0px;
+  }
+
   &__operator {
+    padding-left: 5px;
+    color: #9c27b0;
+  }
+
+  &__result {
     padding-left: 5px;
     color: #9c27b0;
   }
