feat: fixing first number width

--- a/src/components/Calculator/Calculator.scss
+++ b/src/components/Calculator/Calculator.scss
@@ -17,4 +17,12 @@
     padding-left: 5px;
     color: #9c27b0;
   }
+
+  &__firstNumber {
+    width: 100%;
+  }
+
+  &__secondNumber {
+    width: 100%;
+  }
 }
